src/objects/Batch_Job__c.object
<CustomObject>
    <description>Batch organization object</description>
    <fields>
        <fullName>Batch_Type__c</fullName>
        <description>Created By Type</description>
        <label>Batch Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Set__c</fullName>
        <description>Campaign ID Set for batch job</description>
        <label>Campaign Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fail_Reason__c</fullName>
        <label>Fail Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Eamil__c</fullName>
        <defaultValue>&quot;support-daimlercrmcn@nttdata.com&quot;</defaultValue>
        <label>Recipient Eamil</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Batch Job Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Job</label>
    <listViews>
        <fullName>View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Batch_Type__c</columns>
        <columns>Campaign_Set__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>